# UmbraFex

./: Cargo.toml  Dioxus.toml  README.md
assets/: style.scss
src/: app.rs  gpu.rs  highlight.rs  js.rs  main.rs
src/components/: editor.rs  error_pane.rs  mod.rs  perf_pane.rs  timeline_pane.rs  toolbar.rs
