[package]
name    = "umbrafex"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
wgpu = { version = "28", features = ["webgpu"] }
bytemuck = { version = "1",  features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", 
    "Document", 
    "HtmlCanvasElement", 
    "HtmlElement",
    "Performance", 
    "ResizeObserver", 
    "ResizeObserverEntry",
] }

futures-channel = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
